@@ -2469,20 +2469,11 @@ class TCMalloc_Central_FreeList {
   int32_t cache_size_;
 };
 
-#if COMPILER(CLANG)
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunused-private-field"
-#endif
-
 // Pad each CentralCache object to multiple of 64 bytes
 class TCMalloc_Central_FreeListPadded : public TCMalloc_Central_FreeList {
  private:
   char pad_[(64 - (sizeof(TCMalloc_Central_FreeList) % 64)) % 64];
 };
-
-#if COMPILER(CLANG)
-#pragma clang diagnostic pop
-#endif
 
 //-------------------------------------------------------------------
 // Global variables
